--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "recharts": "^2.12.7",
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7",
+    "test-etegram": "^1.0.0",
     "use-debounce": "^10.0.1",
     "zod": "^3.23.8"
   },
